Making contact us page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li><a href="#">Home Page</a></li>
       <li><a href="#">Games</a></li>
       <li><a href="#">Software</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="contact_us.html">Contact Us</a></li>
     </ul>
 
   </div>
